static/styles/left-sidebar.css
#left-sidebar {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    font-size: 0.89rem;
}

#left-sidebar .brand {
    display: table-row;
}

#left-sidebar #user-list,
#left-sidebar #group-pm-list {
    padding-left: 10px;
}

#streams_inline_cog,
#streams_filter_icon,
#join_unsub_stream {
    float: right;
    color: #ccc;
    font-size: 13px;
    margin-top: 3px;
    margin-left: 10px;
}

#streams_inline_cog:hover,
#streams_filter_icon:hover,
#join_unsub_stream:hover {
    color: #555;
}

#streams_header #join_unsub_stream {
    margin-top: 1px;
}

#streams_inline_cog {
    margin-right: 10px;
}

.hashtag:empty:after {
    content: "#";
    font-size: 1.3rem;
    font-weight: 800;
    line-height: 0;
}

.tooltip {
    max-width: 10em;
}

#stream_filters {
    overflow: visible;
    margin: 2px 0px 2px 0px;
    padding: 0;
    font-weight: normal;
}

#stream_filters li {
    padding: 0px;
}

#stream_filters li ul {
    margin-left: 0px;
}

#stream_filters li ul.topic-list li {
    padding-left: 29px;
    padding-top: 1px;
}

#stream-filters-container {
    overflow-x: hidden;
    overflow-y: hidden;
    position: relative;
    z-index: 0;
    width: 100%;
}

#stream-filters-container .ps-scrollbar-y-rail {
    right: 0px !important;
    width: 4px !important;
}

#stream-filters-container .ps-scrollbar-y {
    width: 4px !important;
}

.stream-list-filter {
    margin-left: 1ex;
}

#global_filters li:hover,
#stream_filters li:hover {
    background-color: #e2e8dd;
}

#stream_filters li.active-sub-filter:hover {
    background-color: #ccd6cc;
}

ul.filters {
    list-style-type: none;
    margin-left: 0px;
}

ul.filters a {
    color: #333;
}

ul.filters hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

li.active-filter,
li.active-sub-filter {
    font-weight: 600 !important;
    background: #ddedf6;
    position: relative;
}

.left-sidebar .sidebar-title a {
    color: inherit;
    text-decoration: none;
}

li.hidden-filter {
    visibility: hidden;
    display: none;
}

#left-sidebar .filter-icon {
    display: inline-block;
    width: 18px;
    text-align: center;
    margin-right: 3px;
}

.stream-pin-icon {
    margin-right: 4px !important;
    margin-left: 3px;
}

#global_filters .global-filter {
    position: relative;
    padding-left: 10px;
    padding-right: 10px;
}

.left-sidebar li {
    padding-top: 2px;
    padding-bottom: 2px;
}

#global_filters .global-filter i {
    font-size: 14px;
}

#global_filters .global-filter a {
    display: block;
}

#global_filters .global-filter i.icon-vector-home {
    position: relative;
    top: 1px;
    left: -1px;

    font-size: 16px;
}

#global_filters .global-filter i.icon-vector-envelope {
    font-size: 13px;
}

#global_filters .count,
#stream_filters .count {
    float: right;
    margin-top: 3px;
    line-height: 12px;
    background: #80837f;
    padding: 2px 4px 1px 4px;
    border-radius: 0px;
    color: #ffffff;
    font-size: 12px;
    font-weight: normal;
    letter-spacing: 0.6px;
    border-radius: 4px;
}

#global_filters .count {
    margin-right: 15px;
    display: none;
}

#stream_filters .count {
    margin-right: 10px;
}

#global_filters .count {
    line-height: 13px;
    top: 3px;
    margin-right: 15px;
}

.topic-name {
    display: block;
    line-height: 1.3em;
    width: 100%;
    max-width: 158px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.topic-unread-count,
.private_message_count {
    display: block;
    position: absolute;
    line-height: 1em;
    top: 4px;
    padding: 2px 4px 1px 4px;
    background: #a6ada4;
    color: #ffffff;
    border-radius: 1px;
    font-size: 12px;
    font-weight: normal;
    letter-spacing: 0.6px;
    border-radius: 4px;
}

.topic-unread-count {
    right: 25px;
    top: 2px;
}

.private_message_count {
    right: 15px;
}

ul.filters i {
    padding-right: 0.25em;
    /* Make filter icons the same width so labels line up. */
    display: inline-block;
    width: 13px;
}

ul.filters .arrow {
    position: absolute;
    right: 2px;
    top: 2px;
    right: 4px;
    font-size: 0.8em;
    display: none;
}

ul.filters li:hover .arrow {
    display: inline;
    cursor: pointer;
    color: #888;
}

ul.filters li .arrow:hover {
    display: inline;
    cursor: pointer;
    color: #000;
}

ul.filters .topic-sidebar-arrow {
    font-size: 0.7em;
    top: 1px;
    display: none !important;
}

li.topic-list-item:hover .topic-sidebar-arrow {
    display: inline !important;
    cursor: pointer;
    color: #888;
}

li.topic-list-item .topic-sidebar-arrow:hover {
    display: inline;
    cursor: pointer;
    color: #000;
}

ul.filters li.muted_topic,
ul.filters li.out_of_home_view {
    opacity: 0.25;
}

ul.filters li.out_of_home_view:hover {
    opacity: 0.6;
}

ul.filters li.out_of_home_view li.muted_topic {
    /* If stream is muted, this resets opacity of muted topics in muted
       stream to 1; since opacity is multiplied down through child
       elements, this avoids an unreadable opacity of 0.25^2. */
    opacity: 1;
}

#stream_filters .subscription_block {
    padding: 0 0 0 10px;
    padding: 2px 0px;
    margin-right: 18px;
    margin-left: 10px;
}

#stream_filters .subscription_block::after {
    content: "";
    display: block;
    clear: both;
}

#stream_filters .subscription_block .stream-name {
    overflow-wrap: break-word;
}

#stream_filters .subscription_block.stream-with-count {
    margin-right: 15px;
}

.stream-privacy {
    font-size: 15px;
}

.stream-privacy .icon-vector-lock {
    display: inline-block;
    width: 9px;
    margin-right: 2px;
    margin-left: 1px;
    position: relative;
    top: 1px;
}

.stream-privacy .hashtag {
    position: relative;
    top: 2px;
    margin-right: 5px;
}

ul.topic-list {
    list-style-type: none;
    font-weight: normal;
}

#streams_header a {
    text-decoration: none;
}

ul.expanded_private_messages {
    list-style-type: none;
    font-weight: 300;
    font-size: 0.9em;
    font-weight: 400;
    margin-left: 0px;
    padding-bottom: 2px;
    margin-top: 3px;
}

li.show-more-topics,
li.topic-list-item {
    position: relative;
    padding-right: 5px;
}

li.show-more-private-messages,
li.expanded_private_message {
    position: relative;
    padding-left: 24px;
    padding-bottom: 1px;
    padding-top: 2px;
}

li.expanded_private_message a {
    margin-top: 3px;
}

.show-all-streams a {
    color: #333;
}

.all-streams-padding {
    padding-top: 5px;
    margin-bottom: -5px;
}

.pm-box,
.topic-box {
    display: block;
    margin-right: 38px;
}

.pm-box {
    line-height: 1;
}

.zero-subject-unreads .pm-box,
.zero-subject-unreads .topic-box {
    margin-right: 15px;
}

.zoom-out #topics_header {
    display: none;
}

#global_filters {
    margin-bottom: 20px;
}

#topics_header,
#sharethelove-header {
    border-top: 1px solid #e2e2e2;
    margin-top: 5px;
    margin-right: 10px;
}

#streams_header {
    margin-right: 0px;
    padding-left: 10px;
}

#stream_filters .inactive_stream {
    opacity: .5;
}

.zero_count {
    display: none;
}

#share-the-love {
    margin-left: 0px;
    margin-right: 0px;
    margin-bottom: 5px;
    line-height: 18px;
    display: none;
}

#share-the-love-contents {
    display: none;
}

#share-the-love-expand-collapse {
    position: relative;
    cursor: pointer;
}

#share-the-love-expand-collapse h4 {
    padding-left: 1em;
}

#share-the-love-expand-collapse .toggle {
    position: absolute;
    left: 0px;
    top: 50%;
    margin-top: -8px;
}

#share-the-love input,
#share-the-love p {
    margin-top: 5px;
    margin-bottom: 5px;
}

#referral-form label {
    margin: 0;
}

#share-the-love .icon-vector-heart {
    color: red;
}

#share-the-love .still-have-invites {
    clear: both;
    margin-right: 10px;
}

#share-the-love .no-more-invites {
    clear: both;
    display: none;
    margin-right: 10px;
}

#share-the-love .invite-count-area {
    margin-right: 10px;
}

#share-the-love .alert {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

#referral-form {
    margin-bottom: 0;
}

#tell-a-friend-success {
    display: none;
}

li.show-more-topics a {
    font-size: 75%;
}

li.show-more-private-messages a {
    font-size: 90%;
}

.zoom-in .show-more-topics {
    display: none;
}

.zoomed-in .show-more-private-messages {
    display: none;
}

.zoomed-out .zoom-out-hide {
    display: none;
}

.zoom-out .zoom-out-hide {
    display: none;
}

.zoom-in .zoom-in-hide {
    display: none;
}

.show-all-streams .icon-vector-chevron-left {
    text-decoration: none;
}

